Add profile content-type

--- a/extensions/users-permissions/models/User.settings.json
+++ b/extensions/users-permissions/models/User.settings.json
@@ -54,12 +54,17 @@
       "configurable": false
     },
     "hostedEvents": {
-      "via": "host",
-      "collection": "event"
+      "collection": "event",
+      "via": "host"
     },
     "attendances": {
-      "via": "user",
-      "collection": "attendance"
+      "collection": "attendance",
+      "via": "user"
+    },
+    "profile": {
+      "unique": true,
+      "model": "profile",
+      "via": "user"
     }
   }
 }
